--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   },
   "dependencies": {
   	"express":"*",
+  	"body-parser":"*",
+  	"method-override":"*",
+  	"cookie-parser":"*",
+  	"express-session":"*",
+  	"serve-static":"*",
 		"underscore":"*",
 		"multiparty":"*",
 		"octonode":"*",
