Fixed express version to 4.1.0, added a history.md

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
-  	"express":"*",
+  	"express":"4.1.0",
   	"body-parser":"*",
   	"method-override":"*",
   	"cookie-parser":"*",
