--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
   	"express-session":"*",
 		"underscore":"*",
 		"multiparty":"*",
+    "morgan":"*",
 		"octonode":"*",
 		"async":"*",
-		"mysql":"*",
+		"pg":"*",
 		"randomstring":"*",
-		"dateformat":"*"
+		"moment":"*"
   },
 	"devDependencies":{
-		"nodemon":"*"
+		"nodemon": "*",
+    "grunt": "^0.4.5",
+    "grunt-contrib-cssmin": "^0.9.0",
+    "grunt-contrib-uglify": "^0.4.0"
 	}
 }
